--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "celebrate": "^15.0.3",
     "cloudinary": "^1.21.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "error": "^10.4.0",
     "express": "^4.21.1",
