--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
+    "puppeteer": "^23.9.0",
     "segments": "^1.0.1",
     "uuid": "^11.0.3"
   },
