--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to Server
 on:
   push:
     branches:
-      - dev
+      - main
 
 jobs:
   deploy:
@@ -16,11 +16,14 @@ jobs:
       - name: Deploy via SSH
         uses: appleboy/ssh-action@v1.0.0
         with:
-          host: ${{ secrets.SSH_HOST }}           # e.g., 18.214.60.96
-          username: ${{ secrets.SSH_USER }}       # e.g., ubuntu
-          key: ${{ secrets.SSH_KEY }}             # Private key stored in GitHub Secrets
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
           script: |
             cd /home/ubuntu/MarmaAdmin_BE
+            git fetch origin
+            git checkout main
             git pull origin main
             npm install
             pm2 restart all
+
